Fixed scrollbar

--- a/src/styles/base/reset.scss
+++ b/src/styles/base/reset.scss
@@ -20,8 +20,3 @@ ul {
 li {
   list-style-type: none;
 }
-
-::-webkit-scrollbar {
-    display: none;
-    -ms-overflow-style: none;
-}
